--- a/app/src/main/res/layout/activity_lanuage.xml
+++ b/app/src/main/res/layout/activity_lanuage.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.githubapi.LanuageActivity">
+    tools:context="com.githubapi.language.view.LanguageActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <EditText
+        android:id="@+id/editTextLanguage"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/langaudeEditTextMargin"
+        android:text="@string/enterLanguage"
+        android:maxLines="@integer/languageEditTextMaxLine"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+
+        android:text="@string/searchGitHub"
+        android:id="@+id/buttonSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
