--- a/app/src/main/res/layout/activity_lanuage.xml
+++ b/app/src/main/res/layout/activity_lanuage.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Created by Aditya on 9/4/17 10:35 PM
+  ~ Copyright (c) 2017 All rights reserved.
+  ~
+  ~ Last modified 9/4/17 8:33 PM
+  -->
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.githubapi.language.view.LanguageActivity">
+    tools:context="com.githubapi.repositoryLanguage.view.LanguageActivity">
 
 
     <EditText
