--- a/app/src/main/res/layout/activity_repository_list.xml
+++ b/app/src/main/res/layout/activity_repository_list.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Created by Aditya on 9/4/17 10:34 PM
+  ~ Created by Aditya on 9/4/17 11:29 PM
   ~ Copyright (c) 2017 All rights reserved.
   ~
-  ~ Last modified 9/4/17 10:34 PM
+  ~ Last modified 9/4/17 11:29 PM
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/repoListView"
     android:layout_height="match_parent"
-    tools:context="com.githubapi.repositoryList.view.RepositoryList">
-
-</android.support.constraint.ConstraintLayout>
+    tools:context="com.githubapi.repositoryList.view.RepositoryList" />
