--- a/app/src/main/res/layout/activity_lanuage.xml
+++ b/app/src/main/res/layout/activity_lanuage.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Aditya on 10/4/17 2:57 PM
+  ~ Created by Aditya on 10/4/17 3:55 PM
   ~ Copyright (c) 2017 All rights reserved.
   ~
-  ~ Last modified 10/4/17 2:56 PM
+  ~ Last modified 10/4/17 3:03 PM
   -->
 
 <RelativeLayout
@@ -18,7 +18,7 @@
         android:id="@+id/editTextLanguage"
         android:layout_centerInParent="true"
         android:layout_margin="@dimen/langaudeEditTextMargin"
-        android:text="@string/enterLanguage"
+        android:hint="@string/enterLanguage"
         android:maxLines="@integer/languageEditTextMaxLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
