--- a/app/src/main/res/layout/repositiory_list_item.xml
+++ b/app/src/main/res/layout/repositiory_list_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Created by Aditya on 9/4/17 11:29 PM
+  ~ Created by Aditya on 10/4/17 11:47 PM
   ~ Copyright (c) 2017 All rights reserved.
   ~
-  ~ Last modified 9/4/17 11:29 PM
+  ~ Last modified 10/4/17 11:47 PM
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:minHeight="?android:attr/listPreferredItemHeight"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/listItemMargin"
         android:id="@+id/listItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
