--- a/app/src/main/res/layout/activity_lanuage.xml
+++ b/app/src/main/res/layout/activity_lanuage.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Aditya on 10/4/17 7:05 PM
+  ~ Created by Aditya on 11/4/17 2:17 AM
   ~ Copyright (c) 2017 All rights reserved.
   ~
-  ~ Last modified 10/4/17 7:05 PM
+  ~ Last modified 11/4/17 2:16 AM
   -->
 
 <RelativeLayout
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="com.githubapi.repositoryLanguage.view.LanguageActivity">
+    tools:context="com.githubapi.repositoryLanguage.view.RepositoryLanguageActivity">
 
 
     <EditText
