--- a/app/src/main/res/layout/activity_repository_detail.xml
+++ b/app/src/main/res/layout/activity_repository_detail.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Created by Aditya on 10/4/17 7:03 PM
+  ~ Created by Aditya on 11/4/17 2:29 AM
   ~ Copyright (c) 2017 All rights reserved.
   ~
-  ~ Last modified 10/4/17 7:02 PM
+  ~ Last modified 11/4/17 2:28 AM
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:padding="@dimen/detailPaddingLeft"
     tools:context="com.githubapi.repositoryDetail.view.RepositoryDetailActivity">
 
 
